--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@coara/eslint-config-ng": "^1.0.23",
     "@coara/prettier-config": "^1.0.11",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
